syntax = "proto3";
import "wpGeoPoint.proto";
package pbufWeather; 
message wpLineRenderLabel 
{ 
   repeated wpGeoPoint wGeoPointArray = 1;
}